<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <Spinner
        android:id="@+id/colorPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp" />

    <TextView
        android:id="@+id/thirdActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/this_is_the_setting_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/thirdActivityTitle"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/firstActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_activity" />

        <Button
            android:id="@+id/secondActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/firstActivityBtn"
            android:text="@string/second_activity" />

        <Button
            android:id="@+id/thirdActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/secondActivityBtn"
            android:text="@string/third_activity" />
    </RelativeLayout>

</RelativeLayout>