<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/firstActivityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/this_is_the_first_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:srcCompat="@drawable/ic_settings_black_24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstActivityTitle"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/secondActivityBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_second_activity" />

        <Button
            android:id="@+id/thirdActivtyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/secondActivityBtn"
            android:text="@string/go_to_third_activty" />
    </RelativeLayout>

</RelativeLayout>